[project]
name = "agenticlangraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.0.8",
    "langchain-tavily>=0.2.14",
    "langgraph>=0.2.40",
    "langgraph-cli[inmem]>=0.4.8",
    "langsmith>=0.4.14",
    "mcp>=1.25.0",
    "python-dotenv>=1.1.1",
]
